# gpi-game0

./: CMakeLists.txt  README.txt
res/shaders/: chunkTexture.glsl  chunkVertex.glsl  defaultVertex.glsl  flatColor.glsl  textureDefault.glsl
src/: CMD_BatchRenderer.c  CMD_BatchRenderer.cpp  CMD_BatchRenderer.h  CMD_Block.c  CMD_Block.h  CMD_BlockType.h  CMD_Chunk.c  CMD_Chunk.h  CMD_ChunkData.c  CMD_ChunkData.h  CMD_ChunkRenderer.c  CMD_ChunkRenderer.h  CMD_Global.c  CMD_Global.h  CMD_Input.c  CMD_Input.cpp  CMD_Input.h  CMD_Meshes.c  CMD_Meshes.h  CMD_VertexTypes.c  CMD_VertexTypes.cpp  CMD_VertexTypes.h  CMD_Window.c  CMD_Window.cpp  CMD_Window.h  CMD_World.c  CMD_World.h  GPI_Buffer.h  GPI_Camera.cpp  GPI_FileReader.c  GPI_Renderer.c  GPI_Renderer.cpp  GPI_Shader.c  GPI_Shader.h  GPI_ShaderCompiler.c  GPI_Texture.h  GPI_TextureReader.c  GPI_TextureReader.cpp  GPI_TextureReader.h  GPI_VertexArray.c  (+3 more)
src/Engine/: GPI_Camera.h
src/GlWrappers/: GPI_Texture.cpp  GPI_VertexArray.h
src/Modules/: GPI_ShaderCompiler.cpp  GPI_ShaderCompiler.h
